@@ -269,11 +269,12 @@ Socket::close (void)
 	std::string line;  
 	if (sd_ != SD_CLOSE) {
 		fcntl (sd_, F_SETFL, O_NONBLOCK);
+		guint cnt = 1 + mailbox_->biff()->value_uint ("prevdos_close_socket");
 		do {
 			read (line, false, false);
-		} while (!line.empty());
+		} while ((!line.empty()) && (cnt--));
 	}
-  
+
 #ifdef HAVE_LIBSSL
 	if (use_ssl_ && ssl_) {
 		if (sd_ != SD_CLOSE)
